--- a/header.ini
+++ b/header.ini
@@ -1,6 +1,8 @@
-echo "
-<html>
- <head>
-  <title>  $page_title </title>
- </head>
- <body>";
+<?php
+	echo "
+	<html>
+	<head>
+	<title>  $page_title </title>
+	</head>
+	<body>";
+?>
