--- a/header.ini
+++ b/header.ini
@@ -5,5 +5,5 @@
 	<title>  $page_title </title>
 	</head>
 	<body>
-		<div style='background-color: #3399CC;'>";
+		<div style='background-color: red;'>";
 ?>
